# pytrimal

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: package.yml  requirements.txt  test.yml
bench/: bench.py  plot.py  v0.2.0.json  v0.2.2.json  v0.4.0.json  v0.5.0-neon.json  v0.5.2.json  v0.5.4.json  v0.8.0.json  v0.8.4.json
docs/: .gitignore  conf.py  index.rst  install.rst  requirements.txt  statistics.rst
docs/_static/json/: switcher.json
docs/api/: alignment.rst  index.rst  similarity_matrix.rst  trimmer.rst
docs/examples/: basic.ipynb  data  hmmer.ipynb  index.rst
docs/examples/data/: PF12574.full.afa  halorhodopsin.afa
docs/guide/: copyright.rst  index.rst  install.rst  statistics.rst
docs/guide/examples/: data  index.rst
include/: _unicode.pxd  iostream.pxd
include/cpu_features/: aarch64.pxd  arm.pxd  x86.pxd
include/trimal/: __init__.pxd  alignment.pxd  cleaner.pxd  format_handling.pxd  format_manager.pxd  manager.pxd  report_system.pxd  sequences_matrix.pxd  similarity_matrix.pxd  statistics.pxd
patches/: Alignment.h.patch  BaseFormatHandler.cpp.patch  BaseFormatHandler.h.patch  Cleaner.cpp.patch  Cleaner.h.patch  Gaps.h.patch  Manager.h.patch  Similarity.h.patch  clustal_state.cpp.patch  clustal_state.h.patch  fasta_m10_state.cpp.patch  fasta_m10_state.h.patch  fasta_state.cpp.patch  htmlreport_state.cpp.patch  mega_interleaved_state.cpp.patch  mega_interleaved_state.h.patch  mega_sequential_state.cpp.patch  nexus_m10_state.cpp.patch  nexus_state.cpp.patch  phylip32_m10_state.cpp.patch  phylip32_state.cpp.patch  phylip40_m10_state.cpp.patch  phylip40_state.cpp.patch  phylip_paml_m10_state.cpp.patch  phylip_paml_state.cpp.patch  pir_state.cpp.patch  similarityMatrix.h.patch  trimalManager.h.patch
pkg/aur/: PKGBUILD.in
pytrimal/: __init__.py  _trimal.pxd  _trimal.pyi  _trimal.pyx  _version.py
pytrimal/fileobj/: __init__.pxd  pyfilebuf.cpp  pyfilebuf.h  pyreadbuf.cpp  pyreadbuf.h  pyreadintobuf.cpp  pyreadintobuf.h  pywritebuf.cpp  pywritebuf.h
pytrimal/impl/: avx.cpp  avx.h  avx.pxd  generic.cpp  generic.h  generic.pxd  mmx.cpp  mmx.h  mmx.pxd  neon.cpp  neon.h  neon.pxd  sse.cpp  sse.h  sse.pxd  template.h
pytrimal/patch/: reportsystem.cpp
pytrimal/tests/: __init__.py  __main__.py  test_alignment.py  test_automatic_trimmer.py  test_doctest.py  test_manual_trimmer.py  test_overlap_trimmer.py  test_representative_trimmer.py  test_similarity_matrix.py
pytrimal/tests/data/: ENOG411BWBU.clusters10.fasta  ENOG411BWBU.clusters5.fasta  ENOG411BWBU.cons60.gt90.fasta  ENOG411BWBU.fasta  ENOG411BWBU.id50.fasta  ENOG411BWBU.id70.fasta  ENOG411BWBU.maxidentity75.fasta  ENOG411BWBU.noduplicateseqs.fasta  ENOG411BWBU.seq80.res80.fasta  example.001.AA.clw  example.001.AA.phy  pam70.json
src/: CMakeLists.txt
src/pystreambuf/: CMakeLists.txt  pyreadbuf.cpp  pyreadintobuf.cpp  pywritebuf.cpp
src/pytrimal/: CMakeLists.txt  __init__.py  _trimal.pyi  _trimal.pyx
src/pytrimal/fileobj/: pyreadbuf.cpp  pyreadbuf.h  pyreadintobuf.h
src/pytrimal/patch/: reportsystem.cpp
src/pytrimal/tests/: __init__.py  _base.py  test_automatic_trimmer.py  test_manual_trimmer.py  test_overlap_trimmer.py  test_representative_trimmer.py
src/pytrimal/tests/data/: ENOG411BWBU.automated1.fasta  ENOG411BWBU.automated2.fasta  ENOG411BWBU.clusters10.fasta  ENOG411BWBU.clusters5.fasta  ENOG411BWBU.cons40.gt40.fasta  ENOG411BWBU.fasta  ENOG411BWBU.gappyout.fasta  ENOG411BWBU.noallgaps.fasta  ENOG411BWBU.strict.fasta  ENOG411BWBU.strictplus.fasta  PF12574.full.afa  example.001.AA.clw  example.001.gt90.w3.clw  halorhodopsin.afa
src/scripts/: apply_patch.py
src/scripts/cmake/: CythonExtension.cmake
src/trimal/: CMakeLists.txt
